2008-11-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (TclFinalizeIOSubsystem): Applied Alexandre
	  Ferrieux's patch for [Bug 2270477] to prevent infinite looping
	  during finalization of channels not bound to interpreters.

2008-08-23  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c: Backport of fix for [Bug 2333466].

2008-11-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.decls:   Fix signature and implementation of
	* generic/tclDecls.h:  Tcl_HashStats, such that it conforms
	* generic/tclHash.c:   to the documentation.
	* doc/Hash.3:          [Bug 2308236]

2008-11-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.h:     rename static function FSUnloadTempFile to
	* generic/tclIOUtil.c   TclFSUnloadTempFile, needed in tclLoad.c

	* generic/tclLoad.c     Fixed [Bug 2269431]: load of shared
	                        objects leaves temporary files on windows

2008-11-10  Andreas Kupries  <andreask@activestate.com>

	* doc/platform_shell.n: Fixed [Bug 2255235], reported by Ulrich
	* library/platform/pkgIndex.tcl: Ring <uring@users.sourceforge.net>.
	* library/platform/shell.tcl: Updated the LOCATE command in the
	* library/tm.tcl: package 'platform::shell' to handle the new form
	* unix/Makefile.in: of 'provide' commands generated by tm.tcl. Bumped
	* win/Makefile.in: package to version 1.1.4. Added cross-references
	to the relevant parts of the code to avoid future desynchronization.

2008-11-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclPort.h: remove the ../win/ header dir as the build
	system already has it, and it confuses builds when used with
	private headers installed.

2008-10-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/http.tcl: Backported a fix for reading HTTP-like
	protocols that used to work and were broken with http 2.7. Now
	http 2.7.2

2008-10-23  Don Porter	<dgp@users.sourceforge.net>

	* generic/tcl.h:	Bump version number to 8.5.6b1 to distinguish